feat: Update forecasting notebook

--- a/notebooks/proyeccion_sktime_epi_mc.ipynb
+++ b/notebooks/proyeccion_sktime_epi_mc.ipynb
@@ -10,8 +10,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e4c2410-6d77-4ee3-9abb-6d56fa9c98e7",
+   "metadata": {},
+   "source": [
+    "Assessing how many cases and deaths there are in a population due to an epidemic (or pandemic) and how many cases and deaths are expected in 2 or 3 weeks is an important task in informing the public health response to an epidemic. To do this, it is common to use epidemiological models that calibrate epidemiological curves by varying their parameters taking into account the data collected by a health surveillance system ([Walker P. et. al. 2020](https://www.science.org/doi/10.1126/science.abc0035)). Likewise, in the case of respiratory diseases such as COVID-19, these epidemiological models were characterized by usually being of two types: compartmental models or agent models ([Grefenstette J. et. al. 2013](http://www.ncbi.nlm.nih.gov/pubmed/24103508)).\n",
+    "\n",
+    "In the case of compartmental models, the population subject to infection is divided into a small number of compartmentalized groups, each of these groups being made up of identical individuals in terms of their status with respect to the infection in question. Then, based on a deterministic or stochastic evolution equation (usually a differential equation for each compartment), each compartment in the population is evolved, leaving a set of free parameters that are fixed through the calibration process ([Watson O. 2021](https://www.ojwatson.co.uk/2021/01/04/introduction-to-squire/)). Also, it is worth mentioning that this set of parameters obeys epidemiological variables such as transmission rate, exposure time, among others.\n",
+    "\n",
+    "In the case of agent models, a synthetic population is constructed that has the same statistical characteristics as the real population. For example, in the case of a city, this synthetic population can be constructed in such a way that it respects the distribution of age groups, the population density in the different neighborhoods, among others. Then, interaction rules are generated between the agents of the synthetic population in such a way that each agent or individual modifies its state according to the natural history of the disease. Thus, unlike compartmental models, agent models require multiple simulations that allow estimating the set of parameters that best fit the data of the epidemic curves observed in reality. In fact, it is normal that an agent model has greater freedom to introduce multiple non-pharmacological measures in a population than a compartmental model, for example the use of masks, reducing the number of contacts, opening educational centers, among others. However, this freedom also implies greater complexity of computational resources.\n",
+    "\n",
+    "Finally, regardless of the type of modeling used, once the calibration process is completed, the model is allowed to evolve over time, leaving the parameters fixed (baseline state) or varying them to generate different projection scenarios that allow policy makers to decision to have an idea of what could happen in an epidemic outbreak.\n",
+    "\n",
+    "The idea of this tutorial is to make a prediction of COVID-19 cases and deaths in June 2021 for 3 weeks in Bogotá taking open data extracted from ([Positive cases of COVID-19 in Colombia](https://www.datos.gov.co/Salud-y-Protecci-n-Social/Casos-positivos-de-COVID-19-en-Colombia-/gt2j-8ykr/data_preview)). For this purpose, Machine Learning tools are used that allow predicting time series when the data set has a good number of data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88cb282f-8781-4269-8fe3-724073652893",
+   "metadata": {},
+   "source": [
+    "# Forecasting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bd4b1fb-1b71-47d6-aaf0-a4974fe8f843",
+   "metadata": {},
+   "source": [
+    "A time series can be break down into the following components [seabold2010]:\n",
+    "- **Level:** The average value in the series (this defines the scale).\n",
+    "- **Trend (optional):** Increasing or decreasing values.\n",
+    "- **Seasonality (optional):** Repeating short-term cycles (we don’t have this at the epidemiological week level for COVID-19).\n",
+    "- **Noise (non-systematic):** The random variation in the series.\n",
+    "\n",
+    "Financial or transaction data may be useful to inform trends in epidemiological time series since these would allow the identification of trend changes by specific merchant categories (food, health, transportation, etc.), and identify the correct lag between time series to apply different time series models. In the simplest case, short-term predictions and without including exogenous data, Forecasting can be implemented through the forecaster ```UnobservedComponents``` in Python ([UnobservedComponents](https://www.statsmodels.org/stable/generated/statsmodels.tsa.statespace.structural.UnobservedComponents.html)).\n",
+    "\n",
+    "Nevertheless, other types of forecasters can also be used such as RandomForest, GradientBoosting, etc., with the warning that one forecaster may be better than another depending on the time of evaluation of the prediction (pandemic or endemic period).\n",
+    "Therefore, it is important to mention that there are different metrics to evaluate the effectiveness of a Forecasting model used in epidemiology such as the Continuous Ranked Probability Score (CRPS) or the Weighted Interval Score (WIS), as well as those used in Machine Learning such as Mean Absolute Error (MAE) or the root Mean Squared Error (MSE)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41305edc-aa0e-4482-8970-3b8b4dbd93e9",
+   "metadata": {},
+   "source": [
+    "# Import libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a0b63d2-76be-4037-8b5e-3332eae59072",
+   "metadata": {},
+   "source": [
+    "First, we load the packages we will require for the analysis:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "9dea7f1f-7b84-4957-9557-76d162cb1435",
    "metadata": {},
    "outputs": [],
@@ -49,6 +106,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd36f848-008f-4c3c-84ff-753f49f168dc",
+   "metadata": {},
+   "source": [
+    "The ```pandas``` package provides useful functions for manipulating data, while the ```sklearn``` package provides multiple time series prediction models using Machine Learning ([scikit-learn](https://scikit-learn.org/stable/)). In fact, ```sklearn.ensemble``` provides other types of predictors such as ```RandomForestRegressor``` and ```GradientBoostingRegressor```, although for the sake of this tutorial the ```UnobservedComponents``` predictor will be used ([UnobservedComponents](https://www.statsmodels.org/stable/generated/statsmodels.tsa.statespace.structural.UnobservedComponents.html))."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e58ba4ea-a310-48c5-a4d4-5397e3624011",
    "metadata": {},
    "source": [
@@ -56,8 +121,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8a88c6b-bd8c-4be0-b6c1-9d2452908ce4",
+   "metadata": {},
+   "source": [
+    "Below, two local functions are defined that will allow us to estimate the size of the optimal test set and the optimal period of the seasonal component $c_t$ in the Machine Learning algorithm ([UnobservedComponents](https://www.statsmodels.org/stable/generated/statsmodels.tsa.statespace.structural.UnobservedComponents.html)). An important point to mention is that the dataframe index must be in date format for the ML algorithm to work, which is why the ```get_date_index``` function is defined."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5d480607-568d-4753-bae7-8adde32dacd3",
    "metadata": {
     "tags": []
@@ -75,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "9442bda4-dbfb-4e44-8466-bfd544876eb9",
    "metadata": {
     "tags": []
@@ -129,12 +202,20 @@
    "id": "1a2a45a1-b593-4e09-8175-ffd4c8a4527b",
    "metadata": {},
    "source": [
-    "# Variables"
+    "# Read data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f84b246-d6b9-46ca-a8ab-e9b1b9a0f5ed",
+   "metadata": {},
+   "source": [
+    "Before running the code in this section, make sure that you have downloaded the daily COVID-19 public datasets from the selected locations. You can do so by running the ```download_covid19_data.R``` script. Now, as mentioned, the prediction will be made with data from Bogotá from June 2021."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "186bae6b-7b45-48be-8eb0-5258cb11ce66",
    "metadata": {
     "tags": []
@@ -240,7 +321,7 @@
        "2020-03-17     15       0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,12 +338,9 @@
     "\n",
     "# Set date index\n",
     "df_epi_mc.set_index([\"date\"], inplace = True)\n",
-    "#df_epi_mc.index = get_date_index(df_ = df_epi_mc)\n",
     "\n",
-    "# Resample in epidemiological week\n",
+    "# Define the period as daily data\n",
     "period_ = \"1D\"\n",
-    "#df_epi_mc = df_epi_mc.astype(int).resample(period_).sum()\n",
-    "#df_epi_mc = df_epi_mc[df_epi_mc[\"deaths\"] != 0] \n",
     "df_epi_mc.head(10)"
    ]
   },
@@ -278,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8f9e106c-e755-4c62-b0eb-2fda52937b3d",
    "metadata": {
     "tags": []
@@ -435,7 +513,7 @@
        "[800 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +524,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb7e34ba-3698-4f58-a5af-73bb2a4392cf",
+   "metadata": {},
+   "source": [
+    "For daily cases, the optimal set of parameters is:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "a4fa6a2b-bce2-49d8-874e-86873ab651b3",
    "metadata": {
     "tags": []
@@ -501,7 +587,7 @@
        "0    cases       7          8  827.527336  0.087062  1.487264"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,8 +598,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42cee6b9-f47a-4c2c-b759-fb1d17054fbe",
+   "metadata": {},
+   "source": [
+    "For daily deaths, the optimal set of parameters is:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "c3ed539d-1abe-4918-bff0-f43235a6b7bb",
    "metadata": {
     "tags": []
@@ -567,7 +661,7 @@
        "0   deaths      20         16  10.285117  0.066673  1.083835"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,12 +676,12 @@
    "id": "016e92b9-4b25-457b-9d10-890022700a92",
    "metadata": {},
    "source": [
-    "# Plot forecasting model"
+    "# Plotting the result of the forecasting model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f5a8e55f-dd7c-479b-a300-61bda257070d",
    "metadata": {
     "tags": []
